webpack5，不再使用loader处理图片和其他静态资源了

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -96,3 +96,16 @@ body {
 .btn:hover {
   background-color: RoyalBlue;
 }
+
+#app {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.avatar {
+  width: 100px;
+  height: 100px;
+  background-image: url("../images/02.png");
+  background-size: cover;
+}
